[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlstatsdb"
version = "0.0.3"
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
description = "A simple and pythonic system to store, retrieve, and analyze Rocket League replay stats as returned from ballchasing.com's API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "prepr >= 0.0.6"
]

[project.urls]
"Homepage" = "https://github.com/tanrbobanr/rlstatsdb"